https://test.kuali.org/jira/browse/KRAFUNC-264
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6750 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/areaofresearch.html
+++ b/BFN/areaofresearch.html
@@ -582,6 +582,11 @@
                                                                         </th>
                                                                     </tr>-->
                                                                      <tr>
+                                                                       <th style="text-align:right;">Node:</th>
+                                                                       <th colspan="4"> <!--<a href="#"><img src="../images/arrow-up.gif" width="17" height="14" border="0" alt="Move Up" title="Move this node up within its group"></a>&nbsp;
+                                                                                    <a href="#"><img src="../images/arrow-down.gif" width="17" height="14" border="0" alt="Move Down" title="Move this node down within its group"></a>&nbsp;-->                                                                        <a href="#"><img src="../images/tinybutton-pastenode.gif" width="79" height="15" border="0" alt="Paste Node" title="Paste your previously cut node structure under this node" /></a> </th>
+                                                                     </tr>
+                                                                     <tr>
                                                                         <td class="infoline" style="width:60px;">&nbsp;
                                                                             
                                                                         </td>
