git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6752 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-cor-dev/correspondence.html
+++ b/kra-cor-dev/correspondence.html
@@ -46,7 +46,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
           <!-- TAB -->
-          <div class="tab-container" align=center id="G01" style="display: nonee;">
+          <div class="tab-container" align=center id="G01" style="display: none;">
             <div class="h2-container"><span class="subhead-left">
               <h2>Correspondance Templates</h2>
             </span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -57,7 +57,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                      <td class="tab-subhead">Approval Letter</td>
               </tr>
             </table>
-            <div id="G201sd" style="display: nonee; padding-left:56px">
+            <div id="G201sd" style="display: none; padding-left:56px">
               
               <table class="datatable" summary="view/edit document overview information" cellpAdding="0" cellspacing="0">
                 <tbody>
@@ -1033,7 +1033,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G02" style="display: nonee;">
+          <div class="tab-container" align="center" id="G02" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2><span class="tabtable1-left-colspan">asdf</span></h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
@@ -1074,7 +1074,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G03" style="display: nonee;">
+          <div class="tab-container" align="center" id="G03" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2><span class="tabtable1-left-colspan">asdf</span></h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
@@ -1115,7 +1115,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G04" style="display: nonee;">
+          <div class="tab-container" align="center" id="G04" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2><span class="tabtable1-left-colspan">asdf</span></h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
@@ -1156,7 +1156,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G05" style="display: nonee;">
+          <div class="tab-container" align="center" id="G05" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2><span class="tabtable1-left-colspan">asdf</span></h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
@@ -1197,7 +1197,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G06" style="display: nonee;">
+          <div class="tab-container" align="center" id="G06" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2><span class="tabtable1-left-colspan">asdf</span></h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
