[BFN] https://test.kuali.org/jira/browse/KRAFUNC-106 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6754 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/pop-notes-finhist.html
+++ b/kra-awa-dev/pop-notes-finhist.html
@@ -58,10 +58,33 @@ function MM_goToURL() { //v3.0
     <tbody id="GBFN04" style="display:block;">
     <!-- add line -->
     <tr>
-    <th style="width:100px; text-align:right;">Comments:</th>
-    <td style="text-align:left;"><p>icebant: veritas et veritas, et multum eam dicebant mihi, et nusquam erat in eis, sed falsa loquebantur non de te tantum, qui vere veritas es, sed etiam de istis elementis mundi, creatura tua, de quibus etiam vera dicentes philosophos transgredi debui prae amore tuo, mi pater summe bone, pulchritudo pulchrorum omnium. o veritas, veritas, quam intime etiam tum medullae animi mei suspirabant tibi, cum te illi sonarent mihi frequenter et multipliciter, voce sola, et libris multis et ingentibus! et illa erant fercula, in quibus mihi esurienti te inferebatur sol et luna, pulchra opera tua, sed tamen opera tua, non tu, nec ipsa prima. priora enim spiritalia opera tua quam ista corporea quamvis lucida et caelestia. At ego nec priora illa, sed te ipsam, veritas, in qua non est conmutatio nec momenti obumbratio, esuriebam et sitiebam. et apponebantur adhuc mihi in illis ferculis phantasmata splendida, quibus iam melius erat amare istum solem, saltem istis oculis verum, quam illa falsa animo decepto per oculos. et tamen, quia te putabam, manducabam, non avide quidem, quia nec sapiebas in ore meo sicuti es -- neque enim tu eras illa figmenta inania -- nec nutriebar eis, sed exhauriebar magis. cibus </p>
-    <p>in somnis simillimus est cibis vigilantium, quo tamen dormientes non aluntur; dormiunt enim. at illa nec similia erant ullo modo tibi, sicut nunc mihi locuta es, quia illa erant corporalia phantasmata, falsa corpora, quibus certiora sunt vera corpora ista, quae videmus visu carneo, sive caelestia sive terrestria: cum pecudibus et volatilibus videmus, et certiora sunt, quam cum imaginamur ea. et rursus certius imaginamur ea quam ex eis suspicamur alia grandiora et infinita, quae omnino nulla sunt. qualibus ego tunc pascebar inanibus et non pascebar. At tu, amor meus, in quem deficio, ut fortis sim, nec ista corpora es, quae videmus quamquam in caelo, nec ea, quae non videmus ibi, quia tu ista condidisti nec in summis tuis conditionibus habes. quanto ergo longe es a phantasmatis illis meis, phantasmatis corporum, quae omnino non sunt! quibus certiores sunt phantasiae corporum eorum, quae sunt, et eis certiora corpora, quae tamen non es. sed nec anima es, quae vita est corporum -- ideo melior </p>
-    <p>vita corporum certiorque quam corpora -- sed tu vita es animarum, vita vitarum, vivens te ipsa, et non mutuaris, vita animae meae. Ubi ergo mihi tunc eras et quam longe? et longe peregrinabar abs te, exclusus et a siliquis porcorum, quos de siliquis pascebam. quanto enim meliores grammaticorum et poetarum fabellae quam illa decipula! nam versus et carmen et Medea volans utiliores certe, quam quinque elementa, varie fucata propter quinque antra tenebrarum, quae omnino nulla sunt et occidunt credentem. nam versum et carmen etiam ad vera pulmenta transfero; volantem autem Medeam etsi cantabam, non asserebam, etsi cantari audiebam, non credebam: illa autem credidi. vae, vae! quibus gradibus deductus in profunda inferi, quippe laborans et aestuans inopia veri, cum te, deus meus -- tibi confiteor, qui me miseratus es et nondum confitentem -- cum te non secundum intellectum mentis, quo modo praestare voluisti beluis, sed secundum sensum carnis quaererem. tu au</p></td>
+    <th style="width:100px; text-align:right; vertical-align:top;"><p>Comments:</p></th>
+    <td style="text-align:left;">
+    	<p>Icebant: veritas et veritas, et multum eam dicebant mihi, et nusquam erat in eis, sed falsa loquebantur non de te tantum, qui vere veritas 
+        es, sed etiam de istis elementis mundi, creatura tua, de quibus etiam vera dicentes philosophos transgredi debui prae amore tuo, mi pater 
+        summe bone, pulchritudo pulchrorum omnium. o veritas, veritas, quam intime etiam tum medullae animi mei suspirabant tibi, cum te illi 
+        sonarent mihi frequenter et multipliciter, voce sola, et libris multis et ingentibus! et illa erant fercula, in quibus mihi esurienti 
+        te inferebatur sol et luna, pulchra opera tua, sed tamen opera tua, non tu, nec ipsa prima. priora enim spiritalia opera tua quam ista 
+        corporea quamvis lucida et caelestia. At ego nec priora illa, sed te ipsam, veritas, in qua non est conmutatio nec momenti obumbratio, 
+        esuriebam et sitiebam. et apponebantur adhuc mihi in illis ferculis phantasmata splendida, quibus iam melius erat amare istum solem, saltem 
+        istis oculis verum, quam illa falsa animo decepto per oculos. et tamen, quia te putabam, manducabam, non avide quidem, quia nec sapiebas 
+        in ore meo sicuti es -- neque enim tu eras illa figmenta inan		ia -- nec nutriebar eis, sed exhauriebar magis. cibus</p>
+    	<p>Somnis simillimus est cibis vigilantium, quo tamen dormientes non aluntur; dormiunt enim. at illa nec similia erant ullo modo tibi, 
+        sicut nunc mihi locuta es, quia illa erant corporalia phantasmata, falsa corpora, quibus certiora sunt vera corpora ista, quae videmus visu 
+        carneo, sive caelestia sive terrestria: cum pecudibus et volatilibus videmus, et certiora sunt, quam cum imaginamur ea. et rursus certius 
+        imaginamur ea quam ex eis suspicamur alia grandiora et infinita, quae omnino nulla sunt. qualibus ego tunc pascebar inanibus et non pascebar. 
+        At tu, amor meus, in quem deficio, ut fortis sim, nec ista corpora es, quae videmus quamquam in caelo, nec ea, quae non videmus ibi, quia tu 
+        ista condidisti nec in summis tuis conditionibus habes. quanto ergo longe es a phantasmatis illis meis, phantasmatis corporum, quae omnino non 
+        sunt! quibus certiores sunt phantasiae corporum eorum, quae sunt, et eis certiora corpora, quae tamen non es. sed nec anima es, quae vita 
+        est corporum -- ideo melior.</p>
+    	<p>Vita corporum certiorque quam corpora -- sed tu vita es animarum, vita vitarum, vivens te ipsa, et non mutuaris, vita animae meae. Ubi ergo 
+        mihi tunc eras et quam longe? et longe peregrinabar abs te, exclusus et a siliquis porcorum, quos de siliquis pascebam. quanto enim meliores 
+        grammaticorum et poetarum fabellae quam illa decipula! nam versus et carmen et Medea volans utiliores certe, quam quinque elementa, varie 
+        fucata propter quinque antra tenebrarum, quae omnino nulla sunt et occidunt credentem. nam versum et carmen etiam ad vera pulmenta transfero; 
+        volantem autem Medeam etsi cantabam, non asserebam, etsi cantari audiebam, non credebam: illa autem credidi. vae, vae! quibus gradibus 
+        deductus in profunda inferi, quippe laborans et aestuans inopia veri, cum te, deus meus -- tibi confiteor, qui me miseratus es et nondum 
+        confitentem -- cum te non secundum intellectum mentis, quo modo praestare voluisti beluis, sed secundum sensum carnis quaererem. tu au</p>
+    </td>
     </tr>
     </tbody>
     </table>   
@@ -77,8 +100,11 @@ function MM_goToURL() { //v3.0
     <tbody id="GBFN03" style="display:block;">
     <!-- add line -->
     <tr>
-    <th style="width:100px; text-align:right;">Comments:</th>
-    <td style="text-align:left;">aciebant eversores -- hoc enim nomen saevum et diabolicum velut insigne urbanitatis est -- inter quos vivebam pudore inpudenti, quia talis non eram: et cum eis eram et amicitiis eorum delectabar aliquando, a quor</td>
+    <th style="width:100px; text-align:right; vertical-align:top;"><p>Comments:</p></th>
+    <td style="text-align:left;">
+    	<p>Aciebant eversores -- hoc enim nomen saevum et diabolicum velut insigne urbanitatis est -- inter quos vivebam pudore inpudenti, quia talis 
+        non eram: et cum eis eram et amicitiis eorum delectabar aliquando, a quor.<p>
+    </td>
     </tr>
     </tbody>
     </table>
@@ -94,8 +120,14 @@ function MM_goToURL() { //v3.0
     <tbody id="GBFN02" style="display:block;">
     <!-- add line -->
     <tr>
-    <th style="width:100px; text-align:right;">Comments:</th>
-    <td style="text-align:left;">ragica, quae tamen pati ipse nollet? et tamen pati vult ex eis dolorem spectator, et dolor ipse est voluptas eius. quid est nisi miserabilis insania? nam eo magis eis movetur quisque, quo minus a talibus affectibus sanus est, quamquam, cum ipse patitur, miseria, cum aliis compatitur, misericordia dici solet. sed qualis tandem misericordia in rebus fictis et scenicis? non enim ad subveniendum provocatur auditor, sed tantum ad dolendum invitatur et auctori earum imaginum amplius favet, cum amplius dolet. et si calamitates illae hominum vel antiquae vel falsae sic agantur, ut qui spectat non doleat, abscedit inde fastidiens et reprehendens; s</td>
+    <th style="width:100px; text-align:right; vertical-align:top;"><p>Comments:</p></th>
+    <td style="text-align:left;">
+    	<p>Ragica, quae tamen pati ipse nollet? et tamen pati vult ex eis dolorem spectator, et dolor ipse est voluptas eius. quid est nisi miserabilis 
+    	insania? nam eo magis eis movetur quisque, quo minus a talibus affectibus sanus est, quamquam, cum ipse patitur, miseria, cum aliis compatitur, 
+        misericordia dici solet. sed qualis tandem misericordia in rebus fictis et scenicis? non enim ad subveniendum provocatur auditor, sed tantum ad 
+        dolendum invitatur et auctori earum imaginum amplius favet, cum amplius dolet. et si calamitates illae hominum vel antiquae vel falsae sic 
+        agantur, ut qui spectat non doleat, abscedit inde fastidiens et reprehendens.</p>
+    </td>
     </tr>
     </tbody>
     </table>
@@ -111,16 +143,16 @@ function MM_goToURL() { //v3.0
     <tbody id="GBFN01" style="display:block;">
     <!-- add line -->
     <tr>
-    <th style="width:100px; text-align:right;">Comments:</th>
+    <th style="width:100px; text-align:right; vertical-align:top;"><p>Comments:</p></th>
     <td style="text-align:left;">
-    movetur quisque, quo minus a talibus affectibus sanus est, quamquam, cum ipse patitur, miseria, cum aliis compatitur, misericordia 
-    dici solet. sed qualis tandem misericordia in rebus fictis et scenicis? non enim ad subveniendum provocatur auditor, sed tantum ad 
-    dolendum invitatur et auctori earum imaginum amplius favet, cum amplius dolet. et si calamitates illae hominum vel antiquae vel 
-    falsae sic agantur, ut qui spectat non doleat, abscedit inde fastidiens et reprehendens; si autem doleat, manet intentus et gaudens. 
-    lacrimae ergo amantur et dolores. certe omnis homo gaudere vult. an cum miserum esse neminem libeat, libet tamen esse misericordem, 
-    quod quia non sine dolore est, hac una causa amantur dolores? et hoc de illa vena amicitiae est. Sed quo vadit? quo fluit? ut quid 
-    decurrit in torrentem picis bullientis, aestus inmanes taetratum libidinum, in quos ipsa mutatur, et vertitur per nutum proprium de 
-    caelesti serenitate detorta atque deiecta?
+        <p>Movetur quisque, quo minus a talibus affectibus sanus est, quamquam, cum ipse patitur, miseria, cum aliis compatitur, misericordia 
+        dici solet. sed qualis tandem misericordia in rebus fictis et scenicis? non enim ad subveniendum provocatur auditor, sed tantum ad 
+        dolendum invitatur et auctori earum imaginum amplius favet, cum amplius dolet. et si calamitates illae hominum vel antiquae vel 
+        falsae sic agantur, ut qui spectat non doleat, abscedit inde fastidiens et reprehendens; si autem doleat, manet intentus et gaudens. 
+        lacrimae ergo amantur et dolores. certe omnis homo gaudere vult. an cum miserum esse neminem libeat, libet tamen esse misericordem, 
+        quod quia non sine dolore est, hac una causa amantur dolores? et hoc de illa vena amicitiae est. Sed quo vadit? quo fluit? ut quid 
+        decurrit in torrentem picis bullientis, aestus inmanes taetratum libidinum, in quos ipsa mutatur, et vertitur per nutum proprium de 
+        caelesti serenitate detorta atque deiecta?</p>
     </td>
     </tr>
     </tbody>
