[BFN] https://test.kuali.org/jira/browse/KRAFUNC-259 GLOBAL Awards updates to footer buttons.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6755 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -1868,7 +1868,19 @@
           <div align="right"><br>
             * required </div>
           <div class="globalbuttons">
-            <p><a href="#"><img src="../images/buttonsmall_submit.gif" alt="submit" width="68" height="18" border="0"></a><a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0"><img src="../images/buttonsmall_blanketapp.gif" alt="blanket approve" width="118" height="18" border="0"><img src="../images/buttonsmall_approve.gif" alt="approve" width="69" height="18" border="0"><img src="../images/buttonsmall_disapprove.gif" alt="disapprove" width="83" height="18" border="0"><img src="../images/buttonsmall_reject.gif" alt="reject" width="58" height="18" border="0"><img src="../images/buttonsmall_fyi.gif" alt="FYI" width="43" height="18" border="0"><img src="../images/buttonsmall_acknowledge.gif" alt="ackowledge" width="92" height="18" border="0"></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="close" width="48" height="18" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" border="0"></a></p>
+            <p>
+            	<a href="#"><img src="../images/buttonsmall_submit.gif" alt="submit" width="68" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_blanketapp.gif" alt="blanket approve" width="118" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_approve.gif" alt="approve" width="69" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_disapprove.gif" alt="disapprove" width="83" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_reject.gif" alt="reject" width="58" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_fyi.gif" alt="FYI" width="43" height="18" border="0"></a>
+            	<a href="#"><img src="../images/buttonsmall_acknowledge.gif" alt="ackowledge" width="92" height="18" border="0"></a>
+                <a href="#"><img src="../images/buttonsmall_close.gif" alt="close" width="48" height="18" border="0"></a>
+                <a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" border="0"></a>
+            </p>
           </div>
         </div></td>
       <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
