--- a/kra-awa-dev/aw-time-money-singlenode.html
+++ b/kra-awa-dev/aw-time-money-singlenode.html
@@ -651,7 +651,7 @@
     
 <!-- GLOBAL NAV BUTTONS -->
     <div class="globalbuttons">
-        <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0"></a>
+        <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0"></a> <a href="#"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0"></a>
         <input src="../images/buttonsmall_submit.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="blanket approve" title="Blanket Approve" type="image" />
         <a href="#"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0"></a>
         <a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" border="0"></a>
