--- a/kra-awa-dev/aw-medusahierarchyAP.html
+++ b/kra-awa-dev/aw-medusahierarchyAP.html
@@ -1393,8 +1393,12 @@ function MM_goToURL() { //v3.0
 </div>
 <div align="right" style="margin-right:100px;"><br />
   * required</div>
-<div align="center"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0" /><a href="#"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0" /></a><img src="../images/buttonsmall_refresh.gif" alt="save" width="68" height="18" hspace="5" border="0" /><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0" /></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0" /></a>
-  <!--<a href="#"><img src="../images/searchicon.gif" width="16" height="16" border="0" alt="Search for Group" title="Search for Area of Research"></a>-->
+<div align="center">
+	<input src="../images/buttonsmall_save.gif" onclick="javascript: alert('This would save the document.'); return false" style="border:none;" alt="save" title="Save" type="image" />
+    <input src="../images/buttonsmall_edit.gif" onclick="javascript: alert('This would edit the document.'); return false" style="border:none;" alt="edit" title="Edit" type="image" />
+    <input src="../images/buttonsmall_refresh.gif" onclick="javascript: alert('This would refresh the document.'); return false" style="border:none;" alt="refresh" title="Refresh" type="image" />
+    <input src="../images/buttonsmall_close.gif" onclick="javascript: alert('This would close the document.'); return false" style="border:none;" alt="close" title="Close" type="image" />
+    <input src="../images/buttonsmall_cancel.gif" onclick="javascript: alert('This would cancel the document.'); return false" style="border:none;" alt="cancel" title="Cancel" type="image" />
 </div>
 </body>
 </html>
