--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -8245,7 +8245,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div align="right"><br />
             * required </div>
           <!-- GLOBAL NAV BUTTONS -->
-          <div class="globalbuttons"> <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0" /><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0" /></a> <a href="#"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0" /></a> <a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" border="0" /></a> <a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" border="0" /></a> </div>
+          <div class="globalbuttons"> <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0" /></a> <a href="#"><img src="../images/buttonsmall_edit.gif" alt="edit" width="39" height="18" border="0" /></a> <a href="#"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0" /></a> <a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" border="0" /></a> <a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" border="0" /></a> </div>
         </div></td>
       <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20" /></td>
     </tr>
