[BFN] https://test.kuali.org/jira/browse/KRAFUNC-97 GLOBAL Awards Header Block updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6756 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -249,23 +249,24 @@
     <h1>Awards - Commitments<a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 hspace="12" border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
     <div class="headerbox">
     <table cellpAdding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
-      <tr>
-        <th scope=row>PI: </th>
-        <td>Tester, Joe </td>
-        <th scope=row>Document ID:Status:</th>
-        <td>291607: new</td>
-      </tr>
-      <tr>
-        <th scope=row>Lead Unit: </th>
-        <td>Chemistry</td>
-        <th scope=row>Award ID: Account </th>
-        <td>000212-00001:400100 </td>
-      </tr>
-      <tr>
-        <th class="bord-l" scope=row>Sponsor:</th>  <td class="datacell-l">National Science Foun...</td>
-        <th class="bord-l" scope=row>Last Update: </th>
-        <td class="datacell-l">03/30/2009 10:06 AM by &lt;update user&gt;</td>
-      </tr>
+        <tr>
+            <th style="text-align:right;">PI:</th>
+            <td>Tester, Joe</td>
+            <th style="text-align:right;">Document ID:Status:</th>
+            <td>291607: new</td>
+        </tr>
+        <tr>
+            <th style="text-align:right;">Lead Unit:</th>
+            <td>Chemistry</td>
+            <th style="text-align:right;">Award ID: Account:</th>
+            <td>000212-00001:400100</td>
+        </tr>
+        <tr>
+            <th style="text-align:right;">Sponsor:</th>
+            <td>National Science Foundation</td>
+            <th style="text-align:right;">Last Update:</th>
+            <td>03/30/2009 by &lt;update user&gt;</td>
+        </tr>
     </table>
   </div>
 </div>
