--- a/kra-awa-dev/abud-budget.html
+++ b/kra-awa-dev/abud-budget.html
@@ -169,13 +169,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
                                         <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
-                                        <td width="30%" align="left" style="border-collapse:collapse;">&nbsp;</td>
+                                        <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Updated</th>
-                                        <td align="right" style="border-collapse:collapse;">Apr 10, 2009 7:21:10 PM, Joe Smith</td>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-bottom:none; border-collapse:collapse;">Comments:</th>
@@ -218,13 +218,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
                                         <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
-                                        <td width="30%" align="left" style="border-collapse:collapse;">&nbsp;</td>
+                                        <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Updated</th>
-                                        <td align="right" style="border-collapse:collapse;">Apr 10, 2009 7:21:10 PM, Joe Smith</td>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-bottom:none; border-collapse:collapse;">Comments:</th>
@@ -250,7 +250,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <td class="tab-subhead1" style="border-collapse:collapse;"><div align="center">4</div></td>
                     <td class="tab-subhead1" style="border-collapse:collapse;"><div align="center">09/01/2007</div></td>
                     <td class="tab-subhead1" style="border-collapse:collapse;"><div align="center">08/31/2009</div></td>
-                    <td class="tab-subhead1" style="border-collapse:collapse;"><div align="right">-7,432.00</div></td>
+                    <td class="tab-subhead1" style="border-collapse:collapse;"><div align="right">7,432.00</div></td>
                     <td class="tab-subhead1" style="border-collapse:collapse;"><div align="center">posted</div></td>
                     <td class="tab-subhead1" style="text-align:center; white-space:nowrap; border-collapse:collapse;">
                     	<a href="abud-parameters.html"><img src="../images/tinybutton-open.gif" style="border:none;" alt="open award budget" title="Open Award Budget" /></a>
@@ -267,13 +267,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
                                         <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
-                                        <td width="30%" align="left" style="border-collapse:collapse;">&nbsp;</td>
+                                        <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Updated</th>
-                                        <td align="right" style="border-collapse:collapse;">Apr 10, 2009 7:21:10 PM, Joe Smith</td>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-bottom:none; border-collapse:collapse;">Comments:</th>
@@ -316,13 +316,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
                                         <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
-                                        <td width="30%" align="left" style="border-collapse:collapse;">&nbsp;</td>
+                                        <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Updated</th>
-                                        <td align="right" style="border-collapse:collapse;">Apr 10, 2009 7:21:10 PM, Joe Smith</td>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-bottom:none; border-collapse:collapse;">Comments:</th>
@@ -365,13 +365,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
                                         <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
-                                        <td width="30%" align="left" style="border-collapse:collapse;">&nbsp;</td>
+                                        <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Updated</th>
-                                        <td align="right" style="border-collapse:collapse;">Apr 10, 2009 7:21:10 PM, Joe Smith</td>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-bottom:none; border-collapse:collapse;">Comments:</th>
@@ -414,13 +414,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         <th width="20%" style="text-align: right; border-collapse:collapse;">Cost Sharing</th>
                                         <td width="30%" align="left" style="border-collapse:collapse;">5,000.00</td>
                                         <th width="20%" style="text-align:right; border-collapse:collapse;">F&amp;A Rate Type</th>
-                                        <td width="30%" align="left" style="border-collapse:collapse;">&nbsp;</td>
+                                        <td width="30%" align="left" style="border-collapse:collapse;">MTDC</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-collapse:collapse;">Unrecovered F&amp;A</th>
                                         <td align="left" style="border-collapse:collapse;">632.10</td>
-                                        <th style="text-align:right; border-collapse:collapse;">Last Updated</th>
-                                        <td align="right" style="border-collapse:collapse;">Apr 10, 2009 7:21:10 PM, Joe Smith</td>
+                                        <th style="text-align:right; border-collapse:collapse;">Last Update</th>
+                                        <td align="right" style="border-collapse:collapse;">04/10/2009 7:21:10 PM by Joe Smith</td>
                                     </tr>
                                     <tr>
                                         <th style="text-align:right; border-bottom:none; border-collapse:collapse;">Comments:</th>
