[BFN] https://test.kuali.org/jira/browse/KRAFUNC-246 updates.  Also did a global search and replace for "nonee" to "none" so we could have accurate initial panel collapses.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6760 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -651,7 +651,7 @@
             </tr>
         </table>
 	<!-- Panel Content Div -->
-		<div class="tab-container" align="center" id="G31" style="display: nonee;">
+		<div class="tab-container" align="center" id="G31" style="display: none;">
         <!-- Panel Element: F&A Rates -->
         	<!-- Element Header: F&A Rates -->
                 <div class="h2-container">
