--- a/kra-awa-dev/aw-notes.html
+++ b/kra-awa-dev/aw-notes.html
@@ -114,7 +114,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
         </table>
 	<!-- Panel Content Div -->
-        <div class="tab-container" align="center" id="G301" style="display: nonee;">
+        <div class="tab-container" align="center" id="G301" style="display: none;">
         <!-- Panel Element: Comments -->
             <!-- Element Header: Comments -->
                 <div class="h2-container">
