--- a/kra-awa-dev/abud-budget.html
+++ b/kra-awa-dev/abud-budget.html
@@ -106,7 +106,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="" width="12" height="29" align="absmiddle"></td>
           </tr>
         </table>
-        <div class="tab-container" align="center" id="G01" style="display: nonee;">
+        <div class="tab-container" align="center" id="G01" style="display: none;">
           
           <div class="h2-container"> <span class="subhead-left">
             <h2>Budget Versions</h2>
