--- a/kra-awa-dev/abud-parameters.html
+++ b/kra-awa-dev/abud-parameters.html
@@ -108,7 +108,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
           <!-- TAB -->
-          <div class="tab-container" align="center" id="Gbfn01" style="display: nonee;">
+          <div class="tab-container" align="center" id="Gbfn01" style="display: none;">
               <!-- Panel Element: Budget -->
               <!-- Element Header: Budget -->
               <div class="h2-container">
@@ -195,7 +195,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G125" style="display: nonee;">
+          <div class="tab-container" align="center" id="G125" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Budget Periods &amp; Totals</h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
@@ -571,7 +571,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             </td>
                         </tr>
                         <tr>
-                            <td style="text-align:right;">Previous Change:</td>
+                            <td style="text-align:right;">Previous Budget:</td>
                             <td style="text-align:center;">
                                 09/01/2009
                             </td>
